# PVNet

./: .all-contributorsrc  .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .ruff.toml  Dockerfile  MANIFEST.in  README.md  create_metadata_csv_file_sme_sites.ipynb  experiments.sh  pyproject.toml  requirements-dev.txt  requirements-frozen.txt  requirements.txt  run.py  setup.py
.github/workflows/: branch_ci.yml  build-docker.yaml  ci.yml  merged_ci.yml  pull_ci.yml  python-app.yml  release.yml  tagged_ci.yml  test-release.yml  test.yml
configs/: config.yaml  readme.md
configs.example/: config.yaml  readme.md
configs.example/callbacks/: default.yaml
configs.example/datamodule/: ocf_datapipes.yaml  premade_batches.yaml  presaved_samples.yaml  streamed_batches.yaml  streamed_samples.yaml  windnet_example.yaml
configs.example/datamodule/configuration/: example_configuration.yaml  gcp_configuration.yaml  site_example_configuration.yaml  template_configuration.yaml
configs.example/experiment/: baseline.yaml  conv3d_sat_nwp.yaml  example_simple.yaml  test.yaml
configs.example/hparams_search/: conv3d_optuna.yaml
configs.example/logger/: many_loggers.yaml  neptune.yaml  tensorboard.yaml  wandb.yaml
configs.example/model/: late_fusion.yaml  multimodal.yaml  test.yaml  wind_multimodal.yaml  windnet_example.yaml
configs.example/trainer/: all_params.yaml  default.yaml
configs/callbacks/: default.yaml
configs/datamodule/: netcdf_datamodule_gcp.yaml  ocf_datapipes.yaml  premade_batches.yaml  premade_batches_sme_sites.yaml  streamed_batches.yaml  streamed_batches_sme_sites.yaml
configs/datamodule/configuration/: app_configuration.yaml  batch_creation_config_v0.yaml  batch_creation_sme_sites_test.yaml  example_configuration.yaml  gcp_configuration.yaml  gcp_configuration_v2.yaml  leonardo_wind_configuration.yaml  local_configuration.yaml  pv_ml_ids.csv  template_configuration.yaml
configs/experiment/: baseline.yaml  conv3d_sat_nwp.yaml  example_simple.yaml  test.yaml
configs/hparams_search/: conv3d_optuna.yaml
configs/hydra/: default.yaml
configs/logger/: csv.yaml  neptune.yaml  tensorboard.yaml  wandb.yaml
configs/model/: baseline.yaml  conv3d.yaml  conv3d_sat_nwp.yaml  conv3d_sat_nwp_v1.yaml  conv3d_sat_nwp_v2.yaml  conv3d_sat_nwp_v3.yaml  conv3d_sat_nwp_v4.yaml  conv3d_sat_nwp_v5.yaml  conv3d_sat_nwp_v6.yaml  multimodal.yaml  nwp_dwsrf_weighting.yaml  test.yaml  wind_multimodal.yaml
configs/trainer/: default.yaml
experiments/: analysis.py  india_pv_wind.md  india_windnet_v2.md  mae_analysis.py
experiments/004_n_training_samples/: log-plot.py  readme.md
experiments/india/: plevel.md
experiments/india/002_plevels/: plevel.md
experiments/india/003_wind_plevels/: plevel.md
experiments/india/004_n_training_samples/: log-plot.py  readme.md
experiments/india/005_extra_nwp_variables/: readmd.md
experiments/india/006_da_only/: da_only.md
experiments/india/007_different_seeds/: readme.md
experiments/india/008_coarse4/: readme.md
experiments/uk/011 - Extending forecast to 36 hours (updated ECMWF data)/: PVNet_day_ahead.md
predict_pv_yield/: training.py  utils.py
predict_pv_yield/data/: dataloader.py
predict_pv_yield/models/conv3d/: model_nwp.py  model_sat_nwp.py
pvnet/: __init__.py  app.py  callbacks.py  load_model.py  optimizers.py  training.py  utils.py  validation.py
pvnet/data/: __init__.py  base.py  base_datamodule.py  dataloader.py  datamodule.py  gcp_configuration.yaml  pv_site_datamodule.py  site_datamodule.py  uk_regional_datamodule.py  utils.py  wind_datamodule.py
pvnet/model_cards/: empty_model_card_template.md  pv_india_model_card_template.md  pv_uk_regional_model_card_template.md  wind_india_model_card_template.md
pvnet/models/: __init__.py  base_model.py  ensemble.py  lightning_module.py  model_card_template.md  stores.py  tempCodeRunnerFile.py  utils.py
pvnet/models/baseline/: __init__.py  last_value.py  readme.md  single_value.py  smart_persistence.py
pvnet/models/conv3d/: basic_blocks.py  deep_supervision.py  dense_networks.py  encoders.py  model_sat_nwp.py  weather_residual.py
pvnet/models/late_fusion/: README.md  __init__.py  basic_blocks.py  late_fusion.py
pvnet/models/model_cards/: pv_india_model_card_template.md  pv_uk_regional_model_card_template.md  pvnet_india_model_card_template.md  wind_india_model_card_template.md  windnet_model_card_template.md
pvnet/models/multimodal/: __init__.py  attention_blocks.py  basic_blocks.py  config_validation.py  deep_supervision.py  fusion_blocks.py  multimodal.py  multimodal_base.py  multimodal_dynamic.py  nwp_weighting.py  readme.md  unimodal_teacher.py  weather_residual.py
pvnet/training/: __init__.py  lightning_module.py  plots.py  stores.py  train.py
reports/: pvnet_comp.md
scripts/: app.py  backtest_sites.py  backtest_uk_gsp.py  backtest_uk_regional.py  backtest_uk_sme_sites.py  benchmark_gcp_dataset.py  cache_default_models.py  checkpoint_to_huggingface.py  hindcast.py  join_backtest.py  load_batches.py  migrate_old_model.py  run_app_locally.py  save_batches.py  save_concurrent_batches.py  save_concurrent_samples.py  save_samples.py
tests/: conftest.py  test_app.py  test_end2end.py  test_input_data_config.yaml  test_training.py  test_utils.py  test_valid_config_dict.yaml
tests/configs/dataset/: configuration.yaml
tests/configs/experiment/: example_simple.yaml
tests/configs/model/: conv3d.yaml  conv3d_nwp.yaml  conv3d_sat_nwp.yaml
tests/data/: test_datamodule.py
tests/data/sample_batches/: data_configuration.yaml  datamodule.yaml
tests/models/: test_ensemble.py  test_utils.py
tests/models/baseline/: test_baseline_model.py  test_baseline_model_gsp.py  test_last_value.py  test_single_value.py
tests/models/conv3d/: test_conv3d_model_nwp.py  test_conv3d_model_sat_nwp.py
tests/models/late_fusion/: conftest.py  test_late_fusion.py  test_save_load_pretrained.py
tests/models/multimodal/: test_attention_blocks.py  test_config_validation.py  test_deep_supervision.py  (+8 more)
tests/testconfigs/: config.yaml
(+211 files in other folders)
