[build-system]
requires = ["setuptools>=67", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[project]
name="PVNet"
description = "PVNet"
authors = [{name="Peter Dudfield", email="info@openclimatefix.org"}]
dynamic = ["version"]
license={file="LICENCE"}
readme = {file="README.md", content-type="text/markdown"}
requires-python = ">=3.10"

dependencies = [
    "ocf-data-sampler>=0.2.32",
    "numpy",
    "pandas",
    "matplotlib",
    "xarray",
    "h5netcdf",
    "torch>=2.0.0",
    "lightning",
    "torchvision",
    "typer",
    "sqlalchemy",
    "fsspec[s3]",
    "wandb",
    "huggingface-hub",
    "tqdm",
    "omegaconf",
    "hydra-core",
    "rich",
    "einops",
    "safetensors",
]

[dependency-groups]
dev=[
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
]

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.package-dir]
"pvnet" = "pvnet"

[tool.mypy]
exclude = [
    "^tests/",
]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
exclude = ["tests"]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["E", "D", "I"]
ignore = ["D200","D202","D210","D212","D415","D105"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
